adding the order buttons and detailed order page

--- a/src/components/Drink/Drink.css
+++ b/src/components/Drink/Drink.css
@@ -40,6 +40,15 @@
   
   .order-btn--ordered {
     background-color: #773d24;
+
+    width: 10rem;
+    padding: 0.5rem 1rem;
+    color: white;
+    border: none;
+    box-shadow: 0 0 5px #444;
+    border-radius: 1rem;
+    transition: 300ms;
+    cursor: pointer;
   }
   
   .order-btn:hover {
